@@ -7,7 +7,6 @@ SymmetricAlgorithmPlus.cs
 SymmetricTransform.cs
 Camellia/Camellia.cs
 Camellia/CamelliaManaged.cs
-Camellia/CamelliaTransform.cs
 Camellia/CamelliaTransform64LE.cs
 Camellia/CamelliaTransformBE.cs
 Camellia/CamelliaTransformLE.cs
