@@ -1,5 +1,10 @@
 2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
+	* CamelliaTransform.cs: 削除
+	* CamelliaTransformLE.cs, CamelliaTransformBE.cs: 基底クラスのコードを展開
+
+2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
 	* CamelliaTransform.cs, CamelliaTransformLB.cs, CamelliaTransformBE.cs:
 	基底クラスに統合したコードを分離。ビッグエンディアン用のコードを修正
 
